--- a/s2b/index.html
+++ b/s2b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel=icon href="data:,">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Svelte + TS</title>
+    <title>YouTube Playlist Playtime Calculator</title>
   </head>
   <body>
     <div id="app"></div>
