:new: paste URL directly

--- a/s2b/index.html
+++ b/s2b/index.html
@@ -3,9 +3,10 @@
   <head>
     <link rel=icon href="data:,">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>YouTube Playlist Playtime Calculator</title>
+    <title>YouTube Playlist Playtime</title>
   </head>
   <body>
+    <h1>YouTube Playlist Playtime</h1>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
