:new: noscript & footer

--- a/index.html
+++ b/index.html
@@ -9,5 +9,21 @@
     <h1>YouTube Playlist Playtime</h1>
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
+    <noscript>
+      <p>This app requires JavaScript,
+        since it queries YouTube playlist info from external sites via client-side JavaScript.
+      </p>
+    </noscript>
+    <footer>
+      Powered by <a href="https://invidious.io">Invidious</a>.<br>
+      Made with <a href="https://svelte.dev/">Svelte</a>,
+      <a href="https://vitejs.dev/">Vite</a>,
+      <a href="https://www.typescriptlang.org">TypeScript</a>,
+      <a href="https://simplecss.org">Simple.css</a>.<br>
+      Pair programmed with <a href="https://github.com/features/copilot/">Copilot</a>
+      and <a href="https://codeium.com">Codeium</a>.<br>
+      Hosted at <a href="https://pages.cloudflare.com">Cloudflare Pages</a>.<br>
+      Source code repository hosted at <a href="https://github.com/weakish/youtube-playlist-timer">GitHub</a>.
+    </footer>
   </body>
 </html>
