--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
       Pair programmed with <a href="https://github.com/features/copilot/">Copilot</a>
       and <a href="https://codeium.com">Codeium</a>.<br>
       Hosted at <a href="https://pages.cloudflare.com">Cloudflare Pages</a>.<br>
-      Source code repository hosted at <a href="https://github.com/weakish/youtube-playlist-timer">GitHub</a>.
+      Source code repository hosted at <a href="https://github.com/weakish/youtube-playlist-timer">GitHub</a>.<br>
+      <a href="https://512kb.club"><img src="https://512kb.club/assets/images/orange-team.svg" alt="a proud member of the organge team of 512KB club"/></a>
     </footer>
   </body>
 </html>
