--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       and <a href="https://codeium.com">Codeium</a>.<br>
       Hosted at <a href="https://pages.cloudflare.com">Cloudflare Pages</a>.<br>
       Source code repository hosted at <a href="https://github.com/weakish/youtube-playlist-timer">GitHub</a>.<br>
-      <a href="https://512kb.club"><img src="https://512kb.club/assets/images/orange-team.svg" alt="a proud member of the organge team of 512KB club"/></a>
+      This site is a member of the <a href="https://512kb.club">512KB Club</a>.
     </footer>
   </body>
 </html>
